--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Home</title>
-		<link style="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="./style.css" />
     </head>
     <body>
         <h1>Andrea's Portfolio</h1>
